# MemGatewayObsidian

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: UI-COMPARISON.md
gui-pyside/: pyside_app.py
gui-tauri/src-tauri/: Cargo.toml
gui-tauri/src-tauri/src/: main.rs
scripts/: capture_hook.py  post_tool_hook.py  pre_compact_hook.py  session_start_hook.py  stop_hook.py
src/memory_os/: __init__.py  cli.py  mcp_server.py  scheduler.py
src/memory_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/memory_os/agents/: consolidation.py  forgetting.py  meta_cognition.py  retrieval.py  review.py  sensory_gateway.py  supervisor.py  working_memory.py
src/memory_os/api/: hot_cache.py  routes.py
src/memory_os/canvas/: adapter.py
src/memory_os/config/: __init__.py  loader.py  models.py
src/memory_os/llm/: anthropic_adapter.py  base.py  embedding.py  models.py  openai_adapter.py  service.py  token_tracker.py
src/memory_os/memory/: service.py
src/memory_os/sdk/: client.py
tests/: conftest.py  test_auto_inject.py  test_hooks.py  test_hot_cache.py  test_supervisor.py
tests/test_agents/: test_consolidation.py  test_retrieval.py  test_review.py  test_working_memory.py
tests/test_config/: test_loader.py
tests/test_llm/: test_token_tracker.py
tests/test_memory/: test_service.py
tests/test_vault/: test_frontmatter.py
webui-htmx/: htmx_server.py
webui-htmx/templates/: index.html
webui-react/: index.html  package.json  tsconfig.json  vite.config.ts
webui-react/src/: index.css  main.tsx
(+18 files in other folders)
