[project]
name = "memory-os"
version = "0.1.0"
description = "Mem-Gateway-Obsidian: Human-brain-inspired multi-agent memory system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "aiofiles>=23.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "structlog>=24.0",
    "lancedb>=0.17",
    "numpy>=1.26",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
tui = ["textual>=0.80"]
webui = ["fastapi>=0.115", "uvicorn>=0.30"]
all = ["memory-os[dev,tui,webui]"]

[project.scripts]
memory-os = "memory_os.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
