[package]
name = "memory-os-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "memory_os_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
